<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:background="@color/navy"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".DetailActivity">

<!-- Title-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/title_layout"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:id="@+id/title_fragment"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:text="@string/header_detail_game"
            style="@style/defaultTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

<!-- Content -->

    <!-- Button -->




        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/btn_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_layout"
            app:layout_constraintVertical_bias="0.0">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
              >

            <!-- TITLE -->

            <TextView
                android:id="@+id/text_title"
                style="@style/defaultTitleGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_title"
                app:layout_constraintBottom_toTopOf="@+id/layout_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_weight="1" />

            <!-- IMAGE -->

            <FrameLayout
                android:id="@+id/layout_img"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:maxHeight="400dp"
                app:layout_constraintBottom_toTopOf="@+id/text_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_title"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_weight="1">

                <ImageView
                    android:id="@+id/detail_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher_foreground" />

            </FrameLayout>

            <!-- DESCRIPTION -->

            <TextView
                android:id="@+id/text_desc"
                style="@style/defaultTextPurple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_desc"
                app:layout_constraintBottom_toTopOf="@+id/detail_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_img"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_weight="1" />

            <TextView
                android:id="@+id/detail_desc"
                style="@style/defaultTextWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/details_desc"
                app:layout_constraintBottom_toTopOf="@+id/year_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_desc"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_weight="1" />


            <!-- YEARS -->

            <LinearLayout
                android:id="@+id/year_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/console_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_desc"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_weight="1">

                <TextView
                    android:id="@+id/text_year"
                    style="@style/defaultTextPurple"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/text_year" />

                <TextView
                    android:id="@+id/detail_year"
                    style="@style/defaultTextWhite"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:text="@string/details_year" />

            </LinearLayout>

            <!-- CONSOLE   -->

            <LinearLayout
                android:id="@+id/console_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/year_layout"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_weight="1">

                <TextView
                    android:id="@+id/text_console"
                    style="@style/defaultTextPurple"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/text_console" />

                <TextView
                    android:id="@+id/detail_console"
                    style="@style/defaultTextWhite"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:text="@string/details_console" />

            </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/btn_layout"
        >
        <Button
            android:onClick="removeGame"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/btn_delete"
            android:backgroundTint="@color/violet"
            android:textColor="@color/navy"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>






</androidx.constraintlayout.widget.ConstraintLayout>
